[VERSION 0.1]

- Most functions have been renamed to follow a different coding style with private functions having an underscore prepended.
- A new `_usageinfo()` function was introduced to make the code more readable.
- A new `_list()` function was introduced to make the code more extensible.
- `_listandReturn()` has been renamed to `_listandPrompt()`, and modified to make use of `_list()`.
- Defaulting selection when a single entry was listed by lb was removed.
- All HTML, CSS, RSS files were modified to mirror mines.
- The README.md file was altered to reflect how nlb works.