@@ -1,3 +1,0 @@
-#exclude blog
-/blog
-!/blog/this-is-what-a-post-looks-like.html
