@@ -15,7 +15,7 @@
 <h2 id='this-is-what-a-post-looks-like'>This is what a post looks like</h2>
 <small>[<a href='#this-is-what-a-post-looks-like'>link</a>&mdash;<a href='blog/this-is-what-a-post-looks-like.html'>standalone</a>]</small>
 <p>This is autogenerated by the blog. As you can see, an equivalent RSS feed entry and standalone blog post is generated after you finalize the post.</p>
-<small>Thu, 02 Jul 2020 15:54:42 -0300</small>
+<small>Wed, 15 Jul 2020 17:49:32 -0300</small>
 </div>
 
 
