@@ -1,0 +1,2 @@
+<p>This is autogenerated by the blog. As you can see, no equivalent RSS feed entry and no standalone blog post is not created if the draft is not finalized.</p>
+
