@@ -1,1 +1,3 @@
-AddDescription "This is what a post looks like" "this-is-what-a-post-looks-like.html" #Thu, 02 Jul 2020 15:54:42 -0300
+Options +Indexes
+AddDescription "This is what a post looks like" "this-is-what-a-post-looks-like.html" #Wed, 15 Jul 2020 17:49:32 -0300
+AddDescription "This is what a draft looks like" "this-is-what-a-draft-looks-like.html"
