@@ -12,7 +12,7 @@
 
 <ul>
 <!-- LB -->
-<li>2020 Jul 02 &ndash; <a href="blog/this-is-what-a-post-looks-like.html">This is what a post looks like</a></li>
+<li>2020 Jul 15 &ndash; <a href="blog/this-is-what-a-post-looks-like.html">This is what a post looks like</a></li>
 
 </ul>
 
