@@ -15,7 +15,7 @@
 <item>
 <title>This is what a post looks like</title>
 <guid>https://rnsavinelli.github.io/blog.html#this-is-what-a-post-looks-like</guid>
-<pubDate>Thu, 02 Jul 2020 15:54:42 -0300</pubDate>
+<pubDate>Wed, 15 Jul 2020 17:49:32 -0300</pubDate>
 <description><![CDATA[
 <p>This is autogenerated by the blog. As you can see, an equivalent RSS feed entry and standalone blog post is generated after you finalize the post.</p>
 ]]></description>
