@@ -1,5 +1,6 @@
 [VERSION 0.1]
 
+- The initialization mechanism has been modified.
 - Most functions have been renamed to follow a different coding style with private functions having an underscore prepended.
 - A new `_usageinfo()` function was introduced to make the code more readable.
 - A new `_list()` function was introduced to make the code more extensible.
@@ -7,3 +8,14 @@
 - Defaulting selection when a single entry was listed by lb was removed.
 - All HTML, CSS, RSS files were modified to mirror mines.
 - The README.md file was altered to reflect how nlb works.
+- When possible the code has been decompressed. i.e.:
+
+    confirm() { read -erp "Really $1 \"$base\"? (y/N) " choice && echo "$choice" | grep -qi "^y$" || exit 1;}
+
+    Became:
+
+    confirm() {
+        read -erp "Really $1 \"$base\"? (y/N) " choice && echo "$choice" | grep -qi "^y$" || exit 1
+    }
+
+
